# image_search

./: .gitignore  README.md  docker-compose.yml
etl/: Dockerfile  main.py  pyproject.toml
etl/step/extract/: extract.py
jupyter/: Dockerfile  pyproject.toml
lib/es/: document.py
lib/es/mapping/: image.json
lib/feature/src/: akaze.py  embedding.py  phash.py
model/images/: kmeans_model.pkl
web/: Dockerfile  main.py  pyproject.toml
