[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyter = "^1.0.0"
elasticsearch = "^7.10.1"
ImageHash = "^4.2.0"
opencv-python = "^4.5.1"
sklearn = "^0.0"
matplotlib = "^3.4.1"
pandas = "^1.2.4"
torch = "^1.8.1"
torchvision = "^0.9.1"
pyclustering = "^0.10.1"
poetry = "^1.1.6"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
